infra/k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: manshu123/auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluserip-srv
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "9d8c9fe3-11e8-430b-9850-f91a3119761a"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "4000"
spec:
  type: LoadBalancer
  selector:
    app: auth-service
  ports:
    - name: auth-service
      protocol: TCP
      port: 4000
      targetPort: 4000
