infra/k8s/message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: manshu123/message-service
---
apiVersion: v1
kind: Service
metadata:
  name: message-service-cluserip-srv
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "9d8c9fe3-11e8-430b-9850-f91a3119761a"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: LoadBalancer
  selector:
    app: message-service
  ports:
    - name: message-service
      protocol: TCP
      port: 4002
      targetPort: 4002
