infra/k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: manshu123/user-service
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-cluserip-srv
spec:
  type: LoadBalancer
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 4001
      targetPort: 4001
